--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,13 @@
   }
 }
 
+.product-list {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  flex-wrap: wrap;
+}
 
-
-
-
+h1 {
+  margin-top: 40px;
+}
