--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,61 @@
 
 h1 {
   margin-top: 40px;
+  font-family: "Lobster Two", cursive;
+  font-size: 60px;
+  color: #a0522d;
 }
 
 h2 {
-  font-size: 1.5rem;
+  margin-top: 40px;
+  font-family: "Lobster Two", cursive;
+  font-size: 60px;
   color: #a0522d;
+}
+
+h3 {
+  font-family: "Lobster Two", cursive;
+  font-size: 20px;
+}
+
+h5 {
+  font-family: "Lobster Two", cursive;
+  font-size: 30px;
+}
+
+h6 {
+  font-family: "Lobster Two", cursive;
+  font-size: 20px;
+}
+
+.cart {
+  margin-left: 50px;
+}
+
+.navbar {
+  font-family: "Lobster Two", cursive;
+  font-size: 20px;
+}
+
+.btn-success {
+  color: #fff;
+  background-color: #a0522d;
+  border-color: #ffff;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #a0522d;
+  border-color: #ffff;
+}
+
+.description {
+  font-family: "Lobster Two", cursive;
+  font-size: 30px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
